swi-prolog (5.6.64-3) UNRELEASED; urgency=low

  * Bump Standards-Version to 3.8.3.

 -- Chris Lamb <lamby@debian.org>  Tue, 25 Aug 2009 03:06:14 +0100

swi-prolog (5.6.64-2) unstable; urgency=low

  * Add Build-Depends on libxft-dev, libxext-dev, libice-dev, libjpeg62-dev,
    libxinerama-dev, libxpm-dev and libxt-dev for anti-aliased fonts in XPCE.
    (Closes: #527233)
  * Bump Standards-Version to 3.8.1.

 -- Chris Lamb <lamby@debian.org>  Sat, 09 May 2009 13:43:43 +0100

swi-prolog (5.6.64-1) unstable; urgency=low

  * New upstream release.
  * Fix debian/watch file.
  * Drop 05_fix_java_lib_paths patch - applied upstream.
  * Refer to `/usr/share/common-licenses/GPL-2' in debian/copyright instead of
    just `GPL'.
  * Update Git repository URLs.

 -- Chris Lamb <lamby@debian.org>  Sun, 22 Feb 2009 02:17:41 +0000

swi-prolog (5.6.63-3) unstable; urgency=low

  * Add call to autoconf to ensure the changes in 05_fix_java_lib_paths.dpatch
    are actually applied to the JPL source. Thanks again to Peter Green
    <plugwash@p10link.net>. (Closes: #510409)

 -- Chris Lamb <lamby@debian.org>  Sat, 10 Jan 2009 01:26:48 +0000

swi-prolog (5.6.63-2) unstable; urgency=low

  * Fix FTBFS on architectures other than i386 and amd64 (Closes: #510409)
    - Add 05_fix_java_lib_paths.dpatch to fix Java include directory for
      architectures that have OpenJDK but the Autoconf fragment is new enough
      to cater for it.
    - Don't Build-Depend on openjdk-6-jre on arm and hppa.
    - Expand "Architecture: any" and remove arm and hppa.
    - Move from calling ``dh_* -a'' to ``dh_* -s'' where appropriate.
    - Conditionally call various debhelper commands that reference
      swi-prolog-jpl where that architecture does not apply.

    Many thanks to Peter Green <plugwash@p10link.net> who provided both
    analysis and patches for this issue.
  * Fix FTBFS twice in a row.

 -- Chris Lamb <lamby@debian.org>  Tue, 06 Jan 2009 22:57:07 +0000
