@@ -1,5 +1,6 @@
 swi-prolog (5.6.64-3) UNRELEASED; urgency=low
 
+  * Include CHR library in swi-prolog package. (Closes: #541183)
   * Bump Standards-Version to 3.8.3.
 
  -- Chris Lamb <lamby@debian.org>  Tue, 25 Aug 2009 03:06:14 +0100
